--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,6 +47,9 @@
 	footer {
 		text-align: center;
 	}
+	#ageDiv p {
+		margin-left: 8px;
+	}
 }
 
 @media (max-width: 660px) {
